LBT-7047 switch to batch assign permissions